Adjustments to release official 1.0
Bug fixes